  to be stable around shortly representable numbers, and a numerical tolerance for comparing cutting plane efficacy for the aggregation
  separator is introduced.
- accept fractional continuous implied integral variables in heuristic completesol
- invalidate activity with contradicting infinity contributions

Miscellaneous
-------------
- We now use sassy as shipped with dejavu.

- add objective offset instead of objective offset variable in cip reader
- the solchecker tool is extended for rational values
- updated ampl/mp to v4.0.0
- removed 4th number in SCIP version; new format is major.minor.patch

Known bugs
----------

@page RN9 Release notes for SCIP 9

@section RN930 SCIP 9.3.0
*************************

Features
--------

- simplify expressions of nonlinear constraints in MPS and LP writing to increase chance that they are recognized as quadratic

Performance improvements
------------------------

- extended SOC detection to simple bilinear constraints, e.g., x*y >= 1

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### New API functions
- SCIPdisplaySymmetryGenerators() and SCIPdialogExecDisplaySymmetry() to display generators of symmetry group

### Command line interface

### Interfaces to external software

### Changed parameters

### New parameters

### Data structures

Fixed bugs
----------

Miscellaneous
-------------

- updated description of paramater misc/usesymmetry

@section RN923 SCIP 9.2.3
*************************

Fixed bugs
----------

- avoid hashmap key error in removal of doubletons and singletons in dual presolve of setppc constraints by skipping tripleton locks
- when upgrading to xor constraint require parity variable to be enforced integral
- provide the depth of the applied effective root with SCIPtreeGetEffectiveRootDepth() to avert invalid globalization of constraint set changes